--- a/package.json
+++ b/package.json
@@ -21,20 +21,20 @@
     "build:prod": "rimraf dist && cross-env NODE_ENV=production tsup",
     "build:watch": "tsup --watch",
     "build:publish": "pnpm build:prod && pnpm publish --access public",
-    "lint:fix": "eslint ./src --ext .ts,.tsx --quiet --fix --ignore-path ./.gitignore",
+    "lint:fix": "eslint ./src --quiet --fix",
     "lint:format": "prettier  --loglevel warn --write \"./**/*.{ts,tsx,css,md,json}\" ",
-    "lint": "pnpm lint:format && pnpm lint:fix ",
+    "lint": "pnpm lint:format && pnpm lint:fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage"
   },
   "devDependencies": {
-    "@types/node": "^22.7.4",
-    "@typescript-eslint/eslint-plugin": "^8.8.0",
-    "@typescript-eslint/parser": "^8.8.0",
     "@types/jest": "^29.5.13",
+    "@types/node": "^22.8.6",
+    "@typescript-eslint/eslint-plugin": "^8.12.2",
+    "@typescript-eslint/parser": "^8.12.2",
     "cross-env": "^7.0.3",
-    "eslint": "^8.57.1",
+    "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -42,10 +42,10 @@
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
-    "tsup": "^8.3.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "tsup": "^8.3.5",
+    "typescript": "^5.6.3"
   },
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -60,5 +60,8 @@
   "files": [
     "lib",
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "globals": "^15.11.0"
+  }
 }
