--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "globals": "^15.11.0",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
@@ -60,8 +61,5 @@
   "files": [
     "lib",
     "dist"
-  ],
-  "dependencies": {
-    "globals": "^15.11.0"
-  }
+  ]
 }
