--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,23 +16,23 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.x]
+        node-version: [ 22.x ]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - uses: pnpm/action-setup@v2
-      name: Install pnpm
-      with:
-        version: 8
-        run_install: false
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          version: 9
+          run_install: false
 
-    - name: Install dependencies
-      run: pnpm install
+      - name: Install dependencies
+        run: pnpm install
 
-    - name: Run lint
-      run: pnpm run lint:format
+      - name: Run lint
+        run: pnpm run lint:format
 
-    - name: Run Tests
-      run: pnpm run test:cov
+      - name: Run Tests
+        run: pnpm run test:coverage
