--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@typescript-eslint/parser": "^8.18.2",
+    "@vitest/coverage-v8": "2.1.8",
     "@vitest/ui": "^2.1.8",
     "cross-env": "^7.0.3",
     "eslint": "^9.17.0",
