--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,8 +30,5 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Run lint
-        run: pnpm run lint:format
-
-      - name: Run Tests
-        run: pnpm run test:coverage
+      - name: Run CI Pipeline
+        run: pnpm run ci
