Migration to ts-builds-template

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "-template",
-  "version": "8.0.0",
-  "description": "A basic template for creating a TypeScript library and Publishing it to NPM.",
+  "name": "ts-builds-template",
+  "version": "1.0.0",
+  "description": "A basic template for creating a TypeScript Builds and Publishing it to NPM.",
   "keywords": [
     "typescript",
     "template",
@@ -10,10 +10,10 @@
   ],
   "author": "jordan.burke@gmail.com",
   "license": "MIT",
-  "homepage": "https://github.com/jordanburke/typescript-library-template",
+  "homepage": "https://github.com/jordanburke/ts-builds-template",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jordanburke/typescript-library-template"
+    "url": "https://github.com/jordanburke/ts-builds-template"
   },
   "scripts": {
     "validate": "ts-builds validate",
